# realtime_voice

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.en.md  README.md  compose.yaml  deploy.sh  main.py  pyproject.toml  requirements.txt
backend/: auth.py  config.py  history.py  main.py  personas.py  relay.py  search.py  session.py  transport_webrtc.py  transport_ws.py  webrtc.py
backend/personas/: default.md  futon.md  nekketsu.md
docs/: architecture.md  aws_architecture.md  deployment.md
frontend/: app.js  index.html  transport_webrtc.js  transport_ws.js  webrtc.js
infra/: .terraform.lock.hcl  imports.tf  main.tf  outputs.tf  service.tf  variables.tf
infra/auth/: main.tf  outputs.tf  users.tf  variables.tf
infra/service/: .terraform.lock.hcl  main.tf  outputs.tf  service.tf  variables.tf
personas/: junichi.md
static/: app.js  index.html  login.html  pcm-worklet.js
tools/: record_demo.js
